dcos(readme): add readme file.